# arbitrage-legacy

./: CMakeLists.txt  README.md  install.sh  utils.txt
app/: main.cpp
cmake/: Binance.cmake  Doctest.cmake  RapidJson.cmake  Warnings.cmake
include/: exampleConfig.h.in  platform.h
include/control-bots/: telegram.h
include/disruptors/: binance_compare_price.h
include/shared/: control-bot.h
include/shared/markets/: config.h  state.h
include/strategies/: simple_strategie.h
include/utils/: double.h  time.h
src/shared/markets/: path.cc  state.cc
src/shared/thread/: compare_price.cc
src/strategies/: simple_strategie.cc
tests/: CMakeLists.txt  strategies.cpp
tests/mock/: platform_mock.h  tgbot_mock.h
